# codecrafters-sqlite-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  devenv.nix
src/: database.c  database.h  endian.h  hashmap.c  hashmap.h  macros.h  main.c  page.c  page.h  sql.c  sql.h  sqlite.c  sqlite.h
